# p1-faq-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  .whoami.terminal  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EVAL.md  HANDOFF.md  LICENSE  MISSION.md  Makefile  README.md  app.py  ask.py  banned_terms.txt  cli.py  coderabbit.md  convert_pdf.py  eval.py  pyproject.toml  requirements.txt  requirements.txt.bak  tfidf.py
.github/: pull_request_template.md
app_pkg/: lang.py  retrieval.py
data/: eval.jsonl  wohngeld_eval.jsonl
docs/: 60S_EXPLAINER.md  README.md  REAL_USAGE.md  RELEASE.md  ROADMAP.md  faq2.txt  faq_ar.txt  learnlog.md  north_star.md  parking-lot.md  prompt_guardrails.md  prompt_templates.md
kosniper/: cli.py  contracts.py  llm_client.py  pipeline.py  verify.py
missions/: MC-KOS-01-minimal-ko-phrase.md  MC-KOS-02-turnover-threshold.md  MC-KOS-03-turnover-multi-criteria.md  MC-KOS-04-wire-turnover-into-pipeline.md  MC-KOS-05-checker-interface-alignment.md  MC-KOS-06-reason-evidence-hardening.md  MC-KOS-08-align-checker-text-nullability.md  MC-KOS-51-llm-evidence-checker.md  README.md
reports/: smoke_test.md
samples/: tender_ko_phrase.txt  tender_neutral.txt  tender_turnover.txt
scripts/: cr.sh  demo.sh  demo_pack.sh  ingest_pdf.py  sniper-git.sh
sniper/: domain.py
tests/: test_checker_interface.py  test_cli_contradiction_guard.py  test_cli_entrypoint.py  test_cli_evidence_output.py  test_cli_output_format.py  test_cli_quiet_mode.py  test_cli_text_file.py  test_cli_verdict_validation.py  test_configurable_limits.py  test_demo_pack_script.py  test_demo_script.py  test_document_map.py  test_empty_check_abstain.py  test_evidence_pack_contract.py  test_evidence_select.py  test_evidence_spans.py  test_export_report.py  test_fixture_pdf_scan.py  test_ko_exclusion_phrase_check.py  test_ko_keyword_check.py  test_kosniper_checker_interface.py  test_kosniper_cli.py  test_kosniper_contracts.py  test_kosniper_evidence_pack.py  test_kosniper_goldset_v0.py  test_kosniper_invariants.py  test_kosniper_minimal_ko_phrase_checker.py  test_kosniper_offset_provenance.py  test_kosniper_pipeline_wiring.py  test_kosniper_registry.py  test_kosniper_samples_golden.py  test_kosniper_turnover_threshold_checker.py  test_lang_pref.py  (+14 more)
(+56 files in other folders)
