[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p1-faq-rag"
version = "0.1.0"
description = "Wohngeld FAQ retrieval app (RAG)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "logs", ".gradio", ".chroma", ".faiss", ".venv"]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, import order
fix = true


# --- Packaging (fix CI editable install) ---
# Explicitly tell setuptools what the *real* package is, so it doesn't try to
# auto-discover top-level folders like `data/`, `assets/`, or `reports/`.
[tool.setuptools]
packages = ["app_pkg"]
py-modules = ["app", "tfidf", "eval"]
