[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p1-faq-rag"
version = "0.1.0"
description = "Wohngeld FAQ retrieval app (RAG)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[tool.ruff]
line-length = 140
target-version = "py310"
extend-exclude = ["build", "logs", ".gradio", ".chroma", ".faiss", ".venv"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# Keep CI strict but avoid noisy one-line style rules in a few legacy files.
"app.py" = ["E701"]
"app_pkg/lang.py" = ["E701"]
"scripts/*.py" = ["E702"]
"tests/*.py" = ["E741"]
"tools/codex_cli/*.py" = ["E701", "E702", "E741"]

# --- Packaging (fix CI editable install) ---
# Explicitly tell setuptools what the *real* package is, so it doesn't try to
# auto-discover top-level folders like `data/`, `assets/`, or `reports/`.
[tool.setuptools]
packages = ["app_pkg"]
py-modules = ["app", "tfidf", "eval"]
